== master

* Add Transition#qualified_event, #qualified_from_name, and #qualified_to_name
* Add #fire_events / #fire_events! for running events on multiple state machines in parallel
* Rename next_#{event}_transition to #{event}_transition
* Add #{attribute}_transitions for getting the list of transitions that can be run on an object
* Add #{attribute}_events for getting the list of events that can be fired on an object
* Use generated non-bang event when running bang version so that overriding one affects the other
* Provide access to arguments passed into an event from transition callbacks via Transition#args

== 0.6.3 / 2008-03-10

* Add support for customizing the graph's orientation
* Use the standard visualizations for initial (open arrow) and final (double circle) states
* Highlight final states in GraphViz drawings

== 0.6.2 / 2009-03-08

* Make it easier to override generated instance / class methods

== 0.6.1 / 2009-03-07

* Add i18n support for ActiveRecord validation errors
* Add a validation error when failing to transition for ActiveRecord / DataMapper / Sequel integrations

== 0.6.0 / 2009-03-03

* Allow multiple conditions for callbacks / class behaviors
* Add support for state-driven class behavior with :if/:unless options
* Alias Machine#event as Machine#on
* Fix nil from/to states not being handled properly
* Simplify hooking callbacks into loopbacks
* Add simplified transition/callback requirement syntax

== 0.5.2 / 2009-02-17

* Improve pretty-print of events
* Simplify state/event matching design, improving guard performance by 30%
* Add better error notification when conflicting guard options are defined
* Fix scope name pluralization not being applied correctly

== 0.5.1 / 2009-02-11

* Allow states to be drawn as ellipses to accommodate long names
* Fix rake tasks not being registered in Rails/Merb applications
* Never automatically define machine attribute accessors when using an integration

== 0.5.0 / 2009-01-11
